# EntrainementExercism

./: CMakeLists.txt  README.md  main  main.h  mesTests.cpp
9 - leap/: leap.cpp  leap.h
cpp/4 - pacman-rules/: conditionFunction.cpp
cpp/freelancer-rates/: freelancer_rates.cpp
cpp/lasagna/: lasagna.cpp
cpp/last-will/: last_will.cpp  myFunctions.cpp
cpp/log-levels/: log_levels.cpp
cpp/pacman-rules/: conditionFunction.h  pacman_rules.cpp
cpp/vehicle-purchase/: vehicle_purchase.cpp
